--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Teste</title>
+<link rel=StyleSheet href="Style.css" type="text/css">
 </head>
 <body>
 <section>
@@ -28,7 +29,7 @@ leis<br>trigonometricas.</div></div>
 </p>
 </div>
 <canvas id="canvas" width="500" height="500"></canvas><br>
-</script>
+<script src="Main.js"></script>
 </section>
 </body>
 </html>
